--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
 }
 
 body {
-  font-family: "DejaVuSerif",sans-serif;
+  font-family: "bogart","DejaVuSerif",sans-serif;
   overflow-x: hidden;
 }
 
